# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  20 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
    so that users can overlay service dependencies with their own.
    Bug #140865

  18 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Report services scheduled to be started by another service as
    started OK for splash.

  12 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootmisc as a CRITICAL_SERVICE as too many init scripts don't
    depend on it, which means that /var/run and others could get cleaned after
    daemons write important things there - like pidfiles - when using parallel
    startup.

  10 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed some internal net dependencies with >1 active net service
    Services can now be scheduled on any inactive services.

  27 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Document that depend_eth0() only works in conf.d/net and
    not conf.d/net.$profile, #137727.

  23 Jun 2006; Roy Marples <uberlord@gentoo.org>:
  
    Fix rc-status broken link reporting properly, #137656

  19 Jun 2006; Roy Marples <uberlord@gentoo.org>:
 
    Preliminary support for dscape ieee80211 stack devices.
 
  18 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    vlan id's can now be treated as individual interfaces via init scripts
    provided they depend on the real interface, #137029

  15 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    runscript.sh now supports the --verbose flag setting RC_VERBOSE="yes"
    When RC_VERBOSE="yes" and RC_PARALLEL_STARTUP="yes" and there is no
    exclusive lock (ie, init script not started via rc) then we don't hide
    init script output by setting RC_QUIET_STDOUT, #136034.

  14 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    {start,stop}_volumes moved to rc and halt.sh respectively.
